# Plexir

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  ROADMAP.md  SECURITY.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
docs/: COMMANDS.md  configuration.md  future_plans.md  getting_started.md  memory.md  policy.md  sandbox.md  tools.md
plexir/: app.py  auth_helper.py  config.py
plexir/core/: agents.py  commands.py  config_manager.py  context.py  gemini_rest_client.py  github.py  memory.py  policy.py  providers.py  rag.py  router.py  session.py  skills.py
plexir/mcp/: client.py
plexir/tools/: base.py  definitions.py  sandbox.py
plexir/ui/: app.py  app_layout.py  diff_viewer.py  screens.py  settings_screen.tcss  styles.tcss  widgets.py
tests/: debug_textual.py  list_models.py  mock_mcp_server.py  test_app_structure.py  test_components.py  test_context_pruning.py  test_robustness.py  test_sandbox_integration.py  test_ui_v1_9.py  test_v1_10_core.py  test_v1_10_router.py  test_v1_10_sandbox.py  test_v1_2_features.py  test_v1_4_features.py  test_v1_7_features.py  test_v1_9_features.py  test_web_v1_3.py  verify_app_structure.py  verify_mcp_resources.py  verify_router.py
